8073204: Determining the desired PLAB size adjusts to the the number of threads at the wrong place

Calculate the desired PLAB value for a single thread and then return desired PLAB size according to the current number of threads when needed

Reviewed-by: ysr, jwilhelm, tschatzl